changes in index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-    <img src="D:\sir haseeb SMIT files\haseeb form saylani\saylani image.png" alt="center">
+    <img src="saylani image.png" alt="center">
     </center>
     <h1>
         <center>
